src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__assign_reassign.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Assign(Assign { variable: ExpressionId(0), value: ExpressionId(1) })"
---
Expression {
    id: HirId(
        2,
    ),
    kind: Assign(
        Assign {
            variable: ExpressionId(
                0,
            ),
            value: ExpressionId(
                1,
            ),
        },
    ),
}
