src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__assign_simple.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Assign(Assign { variable: ExpressionId(0), value: ExpressionId(1) })"
---
Assign(
    Assign {
        variable: ExpressionId(
            0,
        ),
        value: ExpressionId(
            1,
        ),
    },
)
