src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__binary_simple.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Binary(Binary { lhs: ExpressionId(0), operation: Plus, rhs: ExpressionId(1) })"
---
Expression {
    id: HirId(
        2,
    ),
    kind: Binary(
        Binary {
            lhs: ExpressionId(
                0,
            ),
            operation: Plus,
            rhs: ExpressionId(
                1,
            ),
        },
    ),
}
