src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__block_empty.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Block { statements: [], expression: None }"
---
Block {
    statements: [],
    expression: ExpressionId(
        0,
    ),
}
