src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__block_expression.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Block { statements: [], expression: Some(ExpressionId(0)) }"
---
Block {
    statements: [],
    expression: ExpressionId(
        0,
    ),
}
