src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__call_no_parameters.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Call(Call { callee: ExpressionId(0), arguments: [] })"
---
Expression {
    id: HirId(
        1,
    ),
    kind: Call(
        Call {
            callee: ExpressionId(
                0,
            ),
            arguments: [],
        },
    ),
}
